--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
-title: Your awesome title
+title: Tarbiyat Nasional
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: tarbiyat-jai
+#  email: your-email@domain.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Write an awesome description for your new site here. You can edit this line
-  in _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
+  Tarbiyat JAI
 
 # Build settings
 
@@ -28,8 +26,8 @@ plugins:
 
 # If you want to link only specific pages in your header, use this and add the path to the pages
 # in order as they should show up.
-header_pages:
-  - about.md
+#header_pages:
+#  - about.md
 
 # Set to `true` to show excerpts on the homepage.
 #show_excerpts: false
@@ -49,7 +47,7 @@ minima:
   # Minima date format.
   # The default value is "%b %d, %Y" (e.g. Nov 14, 2023) 
   # Refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this.
-  #date_format: "%b-%d-%Y"
+  date_format: "%d-%b-%Y"
 
   # Generate social links in footer.
   #social_links:
